--- a/css/style1.css
+++ b/css/style1.css
@@ -7,10 +7,7 @@ body {
   font-family: sans-serif;
   font-size: 10px;
 }
-.status-bar{
-  background-color: #394B59;
-  padding-bottom: 15px;
-}
+
 
 .container {
   box-sizing: border-box;
@@ -25,14 +22,14 @@ body {
   box-sizing: border-box;
   display: inline-block;
   float: left;
-  padding: 0 65px 0 15px;
+  padding: 15px 65px 0 15px;
 }
 .mapicon{
   box-sizing: border-box;
   display: inline-block;
   color: white;
   float: right;
-  padding-right: 15px;
+  padding: 15px 15px 0px 0px;
 }
 
 nav {
@@ -50,10 +47,11 @@ nav {
   font-size: 22px;
   font-family: sans-serif;
   color: white;
+  padding-top: 15px;
 
 }
 
-.restaurant-list {
+.bus-list {
   box-sizing: border-box;
   padding-top: 70px;
 }
